--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,12 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "module": "esnext",
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
